--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "v-calendar": "^3.0.0-alpha.8",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue3-timepicker": "^1.0.0-beta.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
